# github-team-retrospective

./: .env.example  .gitignore  LICENSE  cache_cli.py  config.yaml.example  main.py  pyproject.toml  readme.md
src/: __init__.py  cache_manager.py  github_client.py  metrics_collector.py  repo_cloner.py  report_generator.py  utils.py
templates/: COLOR_THEMES.html  new_report_template.html  report_template.html  report_template_tailwind.html
